2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Close all cached connections on
	error (ctrl-c or otherwise). This is needed as otherwise the script
	wouldn't exit. Also do some code cleanups.

2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Rewrite downloading retry code
	to avoid recursion and to wait a bit between retries. Also allow Curl
	to resume existing downloads. However, do download from scratch when
	needed (e.g. when whole file has been downloaded and some part is
	corrupted).

2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Make it work for stable GNOME
	versions.
	* smoketesting/tarball-conversion-stable.config: Stable GNOME versions
	should also use SFTP to detect the latest version.

2007-12-24  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Implement connection cache.
	Only used for SFTP at the moment. Further, switch to curl instead of
	wget as that allows for a more minimal output. Finally, try to use
	psyco (i386 only).

2007-12-24  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Rewrite the various URL
	handlers in TarballLocator. Also add the concept of 'mirrors'. These
	mirrors are only consulted to determine the latest version, the
	downloading still occurs on the main site. Also add automatic SFTP
	support. This requires a proper SFTP setup (keys in ssh-agent,
	username configured in ~/.ssh.config as well as host in
	~/.ssh/known_hosts).
	* smoketesting/tarball-conversion.config: Add master.gnome.org sftp as
	mirror for download.gnome.org.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Use urlparse module instead of
	nasty regexp.

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Follow http redirects, avoiding
	up to 50 secs of 302 response codes. Also clean up the code by